@@ -1,2 +1,2 @@
 Patrick van Staveren  <trick@vanstaveren.us>
-David Schneider <david.scheneider@picle.org>
+David Schneider <david.schneider@picle.org>
