@@ -1,4 +1,6 @@
+* sometimes response page isn't rendred at startup
 can't resize window
 other languages?  right now it's fixed to EN
+
 
 many more, I'm sure :)
