@@ -1,3 +1,8 @@
+* store response url in page-objects to make it easier to use different wikipedias and other sources
+* handle links
+	* inside wikipedia maybe using wikipediacommonquery
+	* outside ->opening in browser 
+	* or just opening all links in browser
 * auto detect disambig pages somehow?
 * search within all the categories for music groups so we're 99% sure we'll get the right one, and not a disambig or a random article
 	* use one of the external wikipedia indexing engines?  is there one for music?
