@@ -1,6 +1,13 @@
-2006-05-25  David Schneider <david.scheneider@picle.org>
-        (will update ChangeLog soon)
-
+2006-05-25  David Schneider <david.schneider@picle.org>
+	* Little Bugfix, because plugin wasn't getting the song change if the artist didn't change
+	* Reorganized Plugin Structure
+	* Added artist and genre Lookup using google's "i'm feeling lucky" and specific keywords
+	* Added buttons for request and some images on the interface
+	* Created one class per requset (artist, genre,album,etc) to provide specific information as query url 
+	* Added Regex and a Xpath based parser for Wikipedia pages ( xpath one seems buggy?)
+	* Added Request specific decorator for displaying results based on the current gtk-theme colors
+	
+	
 2006-04-30  Patrick van Staveren  <trick@vanstaveren.us>
 	* Google search mode - uses the "i'm feeling lucky" feature of Google to direct to the closes match using Google, adding the keyword "band".  I know, this isn't the best way, but it is much much more accurate than just searching for the artist keyword.
 	* Experimenting with stuff like a status bar and progress bar for loading.
